OAKHILL/src/objects/Fund_of_Interest__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Funds_of_Interest</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Estimate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Estimate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fund_Family__c</fullName>
        <label>Fund Family</label>
        <referenceTo>Fund_Family__c</referenceTo>
        <relationshipName>Funds_of_Interest</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Monthly_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monthly Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quarterly_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quarterly Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Fund Family of Interest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FI-{00000}</displayFormat>
        <label>Fund of Interest</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fund Families of Interest</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>